# pandoc-citeproc

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  Setup.hs  TODO  biblio2yaml.hs  bibtex.hs  bibtex2pandoc.hs  bibtex2yaml.hs  cabal.project  changelog  chicago-author-date.csl  citeproc-pandoc.cabal  citeproc.hs  hackage-docs.sh  mktest.sh  mods2yaml.hs  pandoc-citeproc.cabal  pandoc-citeproc.hs  stack.yaml
.github/workflows/: ci.yml
compat/Text/CSL/Compat/: Pandoc.hs
experimental/: NewParser.hs  chicago-author-date.csl
locales/: locales-af-ZA.xml  locales-ar-AR.xml  locales-ar.xml  locales-bg-BG.xml  locales-ca-AD.xml  locales-cs-CZ.xml  locales-cy-GB.xml  locales-da-DK.xml  locales-de-AT.xml  locales-de-CH.xml  locales-de-DE.xml  locales-el-GR.xml  locales-en-GB.xml  locales-en-US.xml  locales-es-CL.xml  locales-es-ES.xml  locales-es-MX.xml  locales-et-EE.xml  locales-eu.xml  locales-fa-IR.xml  locales-fi-FI.xml  locales-fr-CA.xml  locales-fr-FR.xml  locales-he-IL.xml  locales-hr-HR.xml  locales-hu-HU.xml  locales-id-ID.xml  locales-is-IS.xml  locales-it-IT.xml  locales-ja-JP.xml  locales-km-KH.xml  locales-ko-KR.xml  locales-lt-LT.xml  locales-lv-LV.xml  locales-mn-MN.xml  locales-nb-NO.xml  locales-nl-NL.xml  locales-nn-NO.xml  locales-pl-PL.xml  locales-pt-BR.xml  (+13 more)
man/: Makefile  biblio2yaml.1  biblio2yaml.1.md  pandoc-citeproc.1.md
man/man1/: pandoc-citeproc.1
src/Text/: CSL.hs
src/Text/CSL/: Data.hs  Eval.hs  Exception.hs  Pandoc.hs  Parser.hs  Pickle.hs  Proc.hs  Reference.hs  Style.hs  Util.hs
src/Text/CSL/Compat/: Pandoc.hs
src/Text/CSL/Data/: Embedded.hs  Embedded.hsb
src/Text/CSL/Eval/: Common.hs  Date.hs  Names.hs  Output.hs
src/Text/CSL/Input/: Bibtex.hs  Bibutils.hs  Json.hs  MODS.hs  Pandoc.hs
src/Text/CSL/Output/: Pandoc.hs  Plain.hs
src/Text/CSL/Pickle/: Hexpat.hs  Xml.hs
src/Text/CSL/Proc/: Collapse.hs  Disamb.hs
tests/: 338.expected.native  338.in.native  JSON.hs  chicago-author-date.expected.json  chicago-author-date.expected.native  chicago-author-date.in.json  chicago-author-date.in.native  citeproc-tests.hs  date-ranges.in.native  ieee.expected.json  ieee.expected.native  ieee.in.json  ieee.in.native  in-chicago-author-date.json  in-ieee.json  issue118.expected.native  issue118.in.native  issue119.expected.native  issue119.in.native  issue13.expected.native  issue13.in.native  issue14.expected.native  issue14.in.native  issue152.expected.native  issue152.in.native  issue160.expected.native  issue160.in.native  issue175.expected.native  issue175.in.native  issue197.expected.native  issue197.in.native  issue213.expected.native  issue213.in.native  issue25.expected.native  issue25.in.native  issue250.expected.native  issue250.in.native  issue27.expected.native  issue27.in.native  issue292.expected.native  (+92 more)
tests/biblio2yaml/: 266.biblatex  aksin.biblatex  almendro.biblatex  angenendt.biblatex  aristotle-anima.biblatex  aristotle-physics.biblatex  aristotle-poetics.biblatex  aristotle-rhetoric.biblatex  article.biblatex  augustine.biblatex  averroes-bland.biblatex  averroes-hannes.biblatex  averroes-hercz.biblatex  baez-article.biblatex  baez-online.biblatex  basic.bibtex  bertram.biblatex  biblio.bib.yaml  bibstring-resolution.biblatex  book-averroes.biblatex  book-coleridge.biblatex  book-title-maintitle-series.biblatex  book-vazques-de-parga.biblatex  brandt.biblatex  britannica.biblatex  chiu.biblatex  cicero.biblatex  cms.biblatex  coleridge.biblatex  companion.biblatex  cotton.biblatex  crossref-inbook-mvbook.biblatex  crossref-nested.biblatex  ctan.biblatex  dates.biblatex  doody.biblatex  edtf-date.biblatex  escapedquotes.biblatex  formatting.biblatex  gaonkar-in.biblatex  (+85 more)
tests/biblio2yaml/pandoc-2/: ctan.biblatex  formatting.biblatex  jaffe.biblatex  kastenholz.biblatex  online.biblatex  sigfridsson.biblatex
