name:               pandoc-citeproc
version:            0.16.3.1
cabal-version:      1.12
synopsis:           Supports using pandoc with citeproc

description:        The pandoc-citeproc library supports automatic
                    generation of citations and a bibliography in pandoc
                    documents using the Citation Style Language (CSL)
                    macro language. More details on CSL can be found at
                    <http://citationstyles.org/>.
                    .
                    In addition to a library, the package includes
                    an executable, pandoc-citeproc, which works as a pandoc
                    filter and also has a mode for converting bibliographic
                    databases into CSL JSON and pandoc YAML metadata formats.
                    .
                    pandoc-citeproc originated as a fork of Andrea
                    Rossato's citeproc-hs.

homepage:           https://github.com/jgm/pandoc-citeproc
category:           Text
tested-with:        GHC == 8.0.1, GHC == 8.2.2, GHC == 8.4.3
license:            BSD3
license-file:       LICENSE
author:             John MacFarlane, Andrea Rossato
maintainer:         jgm@berkeley.edu
build-type:         Custom
data-files:         chicago-author-date.csl
                    locales/*.xml
                    -- documentation
                    README.md
                    LICENSE
                    man/man1/pandoc-citeproc.1
                    changelog
extra-source-files: stack.yaml
                    -- tests
                    tests/*.in.native
                    tests/*.expected.native
                    tests/*.csl
                    tests/biblio.bib
                    tests/biblatex-examples.bib
                    tests/biblio2yaml/*.bibtex
                    tests/biblio2yaml/*.biblatex
                    tests/biblio2yaml/pandoc-2/*.biblatex

source-repository head
  type:          git
  location:      git://github.com/jgm/pandoc-citeproc.git

custom-setup
  setup-depends: base, Cabal

flag bibutils
  description: Use Chris Putnam's Bibutils.
  default:     True

flag embed_data_files
  description: Embed locale files into the library (needed for windows packaging)
  default:     False

flag unicode_collation
  description: Use Haskell bindings to the International Components for Unicode (ICU) libraries
  default:     False

flag test_citeproc
  description: Build the test-citeproc program
  default:     False

flag debug
  description: Turn on debug tracing.
  default:     False

flag static
  description: Use static linking.
  default:     False

library
    hs-source-dirs:   src, compat
    exposed-modules:  Text.CSL.Pandoc
                      Text.CSL
                      Text.CSL.Reference
                      Text.CSL.Exception
                      Text.CSL.Style
                      Text.CSL.Eval
                      Text.CSL.Eval.Common
                      Text.CSL.Eval.Date
                      Text.CSL.Eval.Names
                      Text.CSL.Eval.Output
                      Text.CSL.Parser
                      Text.CSL.Proc
                      Text.CSL.Proc.Collapse
                      Text.CSL.Proc.Disamb
                      Text.CSL.Input.Bibutils
                      Text.CSL.Input.Bibtex
                      Text.CSL.Output.Pandoc
                      Text.CSL.Output.Plain
                      Text.CSL.Data
    other-modules:    Text.CSL.Util
                      Paths_pandoc_citeproc
                      Text.CSL.Compat.Pandoc
    ghc-options:      -funbox-strict-fields -Wall -fno-warn-unused-do-bind
    ghc-prof-options: -fprof-auto-exported
    build-depends:    base >= 4 && < 5,
                      syb,
                      parsec,
                      old-locale,
                      time,
                      containers,
                      directory,
                      mtl,
                      bytestring, filepath,
                      network < 3.2,
                      pandoc-types >= 1.17.3 && < 1.18,
                      pandoc >= 1.16 && < 2.9,
                      tagsoup,
                      aeson >= 0.7 && < 1.5,
                      text,
                      vector,
                      xml-conduit >= 1.2 && < 1.10,
                      unordered-containers >= 0.2 && < 0.3,
                      data-default,
                      setenv >= 0.1 && < 0.2,
                      split,
                      yaml >= 0.11,
                      HsYAML >= 0.2 && < 0.3,
                      HsYAML-aeson >= 0.2 && < 0.3

    if impl(ghc < 8.0)
      build-depends: semigroups == 0.18.*
    if impl(ghc < 8.4)
      hs-source-dirs: prelude
      other-modules:  Prelude
      build-depends:  base-compat >= 0.9
    default-language: Haskell2010
    default-extensions: CPP, NoImplicitPrelude

    if flag(debug)
       build-depends:   pretty-show
       cpp-options:     -DTRACE

    if flag(bibutils)
       build-depends:   hs-bibutils >= 6.4
       cpp-options:     -DUSE_BIBUTILS

    if flag(embed_data_files)
       build-depends: file-embed >= 0.0 && < 0.1
       cpp-options:   -DEMBED_DATA_FILES
       other-modules: Text.CSL.Data.Embedded

    if flag(unicode_collation)
       build-depends: text, text-icu
       cpp-options:   -DUNICODE_COLLATION
    else
       build-depends: rfc5051

executable pandoc-citeproc
    main-is:          pandoc-citeproc.hs
    hs-source-dirs:   .
    ghc-options:      -funbox-strict-fields -Wall
    ghc-prof-options: -fprof-auto-exported -rtsopts
    build-depends:    base >= 4 && < 5,
                      pandoc-citeproc,
                      pandoc-types >= 1.17.3 && < 1.18,
                      pandoc >= 1.16 && < 2.9,
                      aeson,
                      aeson-pretty >= 0.8,
                      yaml >= 0.11,
                      libyaml,
                      bytestring,
                      syb,
                      attoparsec,
                      text,
                      filepath,
                      safe
    if impl(ghc < 8.0)
      build-depends: semigroups == 0.18.*
    if impl(ghc < 8.4)
      hs-source-dirs: prelude
      other-modules:  Prelude
      build-depends:  base-compat >= 0.9
    other-modules:    Paths_pandoc_citeproc
    default-language: Haskell2010
    default-extensions: CPP, NoImplicitPrelude
    ghc-options:      -funbox-strict-fields -Wall -fno-warn-unused-do-bind -threaded
    if flag(static)
       ld-options:     -static
    if flag(bibutils)
       cpp-options:     -DUSE_BIBUTILS

executable test-citeproc
  Main-Is:        test-citeproc.hs
  Other-Modules:  JSON
  Hs-Source-Dirs: tests, compat
  if flag(test_citeproc)
    Buildable:    True
  else
    Buildable:    False
  build-depends:  base >= 4 && < 5,
                  pandoc-citeproc,
                  aeson,
                  directory,
                  text,
                  mtl,
                  pandoc-types >= 1.17.3 && < 1.18,
                  pandoc >= 1.16 && < 2.9,
                  filepath,
                  bytestring,
                  process,
                  temporary >= 1.1,
                  yaml >= 0.11,
                  containers >= 0.4,
                  vector >= 0.10
  if impl(ghc < 8.0)
    build-depends: semigroups == 0.18.*
  if impl(ghc < 8.4)
    hs-source-dirs: prelude
    other-modules:  Prelude
    build-depends:  base-compat >= 0.9
  ghc-options:    -funbox-strict-fields -Wall -fno-warn-unused-do-bind -threaded
  default-language: Haskell2010
  default-extensions: CPP, NoImplicitPrelude
  other-modules:  Text.CSL.Compat.Pandoc
  build-tools: pandoc-citeproc

test-suite test-pandoc-citeproc
  Type:           exitcode-stdio-1.0
  Main-Is:        test-pandoc-citeproc.hs
  Other-Modules:  JSON
  Hs-Source-Dirs: tests, compat
  build-depends:  base >= 4 && < 5,
                  aeson,
                  directory,
                  text,
                  pandoc-types >= 1.17.3 && < 1.18,
                  mtl,
                  pandoc >= 1.16 && < 2.9,
                  filepath,
                  containers,
                  bytestring,
                  pandoc-citeproc,
                  process,
                  temporary >= 1.1,
                  yaml >= 0.11
  ghc-options:    -funbox-strict-fields -Wall -fno-warn-unused-do-bind -threaded
  if impl(ghc < 8.0)
    build-depends: semigroups == 0.18.*
  if impl(ghc < 8.4)
    hs-source-dirs: prelude
    other-modules:  Prelude
    build-depends:  base-compat >= 0.9
  default-language: Haskell2010
  default-extensions: CPP, NoImplicitPrelude
  other-modules:  Text.CSL.Compat.Pandoc
  build-tools: pandoc-citeproc
